@@ -8,7 +8,8 @@ Revision history for SPVM
         * Add dynamic_lib field to SPVM::Builder::Config::Exe.
         * Add static_lib field to SPVM::Builder::Config::Exe.
         * Add SPVM::Document::NativeMethod document. Native methods of SPVM::Document::NativeAPI is moved to this document.
-
+        [BUG FIX]
+        * Fix the bug that local variable can contain "::".
         [NON BACKWORD COMPATIBLE CHANGES]
         * Remove "any_object_basic_type_id" native API. ID 155 is reused by "free_env_prepared" native API.
         * Remove "string_basic_type_id" native API. ID 162 is reused by "cleanup_global_vars" native API.
